how did we fill up the disk?

--- a/.github/workflows/rust_build.yml
+++ b/.github/workflows/rust_build.yml
@@ -38,6 +38,8 @@ jobs:
         run: cargo build --workspace
       - name: "Build the idv-tui feature kanidm binary"
         run: cargo build --bin kanidm --features idv-tui
+      - name: "Check disk space"
+        run: df -h
       - name: "Run cargo test"
         run: cargo test
   run_release:
