--- a/.github/workflows/rust_build.yml
+++ b/.github/workflows/rust_build.yml
@@ -43,10 +43,12 @@ jobs:
         run: cargo build --workspace
       - name: "Build the idv-tui feature kanidm binary"
         run: cargo build --bin kanidm --features idv-tui
-      - name: "Check disk space and size of target"
+      - name: "Check disk space and size of target, then clean it"
         run: |
           df -h
           du -sh target/
+          rm -rf target/*
+
       - name: "Run cargo test"
         run: cargo test
   run_release:
