--- a/libs/profiles/Cargo.toml
+++ b/libs/profiles/Cargo.toml
@@ -16,6 +16,8 @@ repository = { workspace = true }
 [lib]
 name = "profiles"
 path = "src/lib.rs"
+test = false
+doctest = false
 
 [dependencies]
 serde = { workspace = true, features = ["derive"] }
