--- a/proto/Cargo.toml
+++ b/proto/Cargo.toml
@@ -11,6 +11,10 @@ license = { workspace = true }
 homepage = { workspace = true }
 repository = { workspace = true }
 
+[lib]
+test = true
+doctest = true
+
 [features]
 wasm = ["webauthn-rs-proto/wasm"]
 
