--- a/libs/sketching/Cargo.toml
+++ b/libs/sketching/Cargo.toml
@@ -11,6 +11,10 @@ license = { workspace = true }
 homepage = { workspace = true }
 repository = { workspace = true }
 
+[lib]
+test = false
+doctest = false
+
 [dependencies]
 num_enum = { workspace = true }
 tracing = { workspace = true, features = ["attributes"] }
