--- a/server/core/Cargo.toml
+++ b/server/core/Cargo.toml
@@ -11,6 +11,10 @@ license = { workspace = true }
 homepage = { workspace = true }
 repository = { workspace = true }
 
+[lib]
+test = true
+doctest = false
+
 [dependencies]
 async-trait = { workspace = true }
 axum = { workspace = true }
