--- a/server/testkit/Cargo.toml
+++ b/server/testkit/Cargo.toml
@@ -14,6 +14,8 @@ repository = { workspace = true }
 [lib]
 name = "kanidmd_testkit"
 path = "src/lib.rs"
+test = true
+doctest = false
 
 [features]
 default = []
