--- a/tools/orca/Cargo.toml
+++ b/tools/orca/Cargo.toml
@@ -14,6 +14,8 @@ repository = { workspace = true }
 [[bin]]
 name = "orca"
 path = "src/main.rs"
+test = true
+doctest = false
 
 [dependencies]
 clap = { workspace = true }
