--- a/unix_integration/Cargo.toml
+++ b/unix_integration/Cargo.toml
@@ -21,25 +21,35 @@ tpm = ["dep:tss-esapi", "kanidm_lib_crypto/tpm"]
 name = "kanidm_unixd"
 path = "src/daemon.rs"
 required-features = ["unix"]
+test = true
+doctest = false
 
 [[bin]]
 name = "kanidm_unixd_tasks"
 path = "src/tasks_daemon.rs"
 required-features = ["unix"]
+test = true
+doctest = false
 
 [[bin]]
 name = "kanidm_ssh_authorizedkeys"
 path = "src/ssh_authorizedkeys.rs"
 required-features = ["unix"]
+test = true
+doctest = false
 
 [[bin]]
 name = "kanidm-unix"
 path = "src/tool.rs"
 required-features = ["unix"]
+test = true
+doctest = false
 
 [lib]
 name = "kanidm_unix_common"
 path = "src/lib.rs"
+test = true
+doctest = false
 
 [dependencies]
 async-trait.workspace = true
