--- a/server/web_ui/admin/Cargo.toml
+++ b/server/web_ui/admin/Cargo.toml
@@ -37,6 +37,7 @@ wasm-bindgen-futures = { workspace = true }
 wasm-timer = "0.2.5"
 yew = { workspace = true, features = ["csr"] }
 yew-router = { workspace = true }
+gloo-utils = { workspace = true }
 
 [dependencies.web-sys]
 workspace = true
