--- a/server/web_ui/user/Cargo.toml
+++ b/server/web_ui/user/Cargo.toml
@@ -37,6 +37,7 @@ gloo-timers = "0.3.0"
 wasm-timer = "0.2.5"
 regex.workspace = true
 lazy_static.workspace = true
+gloo-utils = { workspace = true }
 
 [dependencies.web-sys]
 workspace = true
