--- a/libs/crypto/Cargo.toml
+++ b/libs/crypto/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "kanidm_lib_crypto"
 version = "0.1.0"
-edition = "2021"
+edition = { workspace = true }
 
 [features]
 tpm = ["dep:tss-esapi"]
