--- a/book/book.toml
+++ b/book/book.toml
@@ -14,5 +14,9 @@ edit-url-template = "https://github.com/kanidm/kanidm/edit/master/book/{path}"
 git-repository-url = "https://github.com/kanidm/kanidm"
 git-repository-icon = "fa-github"
 additional-css = ["theme.css"]
+additional-js = ["mermaid.min.js", "mermaid-init.js"]
 
 [preprocessor.template]
+
+[preprocessor.mermaid]
+command = "mdbook-mermaid"
