--- a/.github/workflows/debian_package_kanidm.yml
+++ b/.github/workflows/debian_package_kanidm.yml
@@ -52,6 +52,10 @@ jobs:
           path: |
             target/*.deb
   upload-to-releases:
+    permissions:
+      # https://docs.github.com/en/actions/using-jobs/assigning-permissions-to-jobs
+      contents: write # allows the action to create a release
+
     name: Upload to releases
     needs: build-deb-package
     runs-on: ubuntu-latest
