--- a/.github/workflows/rust_build.yml
+++ b/.github/workflows/rust_build.yml
@@ -22,6 +22,7 @@ jobs:
       RUSTC_WRAPPER: sccache
       CARGO_INCREMENTAL: 0
       CARGO_TERM_COLOR: always
+      MALLOC_CONF: "thp:always,metadata_thp:always"
     steps:
       - uses: actions/checkout@v4
       - name: Install Rust
@@ -64,6 +65,7 @@ jobs:
       RUSTC_WRAPPER: sccache
       CARGO_INCREMENTAL: 0
       CARGO_TERM_COLOR: always
+      MALLOC_CONF: "thp:always,metadata_thp:always"
     steps:
       - uses: actions/checkout@v4
       - name: Install Rust
