--- a/Cargo.toml
+++ b/Cargo.toml
@@ -162,6 +162,25 @@ num_enum = "^0.5.11"
 oauth2_ext = { version = "^4.1.0", package = "oauth2", default-features = false }
 openssl-sys = "^0.9"
 openssl = "^0.10.59"
+
+opentelemetry = { version = "0.20.0" }
+opentelemetry_api = { version = "0.20.0", features = ["logs", "metrics"] }
+opentelemetry-otlp = { version = "0.13.0", default-features = false, features = [
+    "serde",
+    "logs",
+    "metrics",
+    "http-proto",
+    "grpc-tonic",
+] }
+opentelemetry_sdk = "0.20.0"
+opentelemetry-stdout = { version = "0.1.0", features = [
+    "logs",
+    "metrics",
+    "trace",
+] }
+tonic = "0.10.2"
+tracing-opentelemetry = "0.21.0"
+
 paste = "^1.0.14"
 pkg-config = "^0.3.27"
 proc-macro2 = "1.0.69"
