--- a/server/testkit/Cargo.toml
+++ b/server/testkit/Cargo.toml
@@ -20,36 +20,44 @@ doctest = false
 [features]
 default = []
 # Enables webdriver tests, you need to be running a webdriver server
-webdriver = ["fantoccini"]
+webdriver = []
 
 [dependencies]
+assert_cmd = "2.0.12"
+escargot = "0.5.8"
+hyper-tls = { workspace = true }
+http = { workspace = true }
 kanidm_client = { workspace = true }
 kanidm_proto = { workspace = true }
 kanidmd_core = { workspace = true }
 kanidmd_lib = { workspace = true }
-# used for webdriver testing
-hyper-tls = { workspace = true }
-http = { workspace = true }
-# used for webdriver testing
-fantoccini = { version = "0.19.3", optional = true }
-serde = { workspace = true }
-url = { workspace = true, features = ["serde"] }
-reqwest = { workspace = true, default-features = false, features = ["cookies"] }
-sketching = { workspace = true }
-testkit-macros = { workspace = true }
-tracing = { workspace = true, features = ["attributes"] }
-tokio = { workspace = true, features = ["net", "sync", "io-util", "macros"] }
-openssl = { workspace = true }
 lazy_static = { workspace = true }
+openssl = { workspace = true }
 petgraph = { version = "0.6.4", features = ["serde", "serde-1"] }
-regex.workspace = true
-
+regex = { workspace = true }
+reqwest = { workspace = true, default-features = false, features = ["cookies"] }
+serde = { workspace = true }
+sketching = { workspace = true }
+tempfile = { workspace = true }
+testkit-macros = { workspace = true }
+tokio = { workspace = true, features = [
+    "net",
+    "sync",
+    "io-util",
+    "macros",
+    "rt",
+] }
+tracing = { workspace = true, features = ["attributes"] }
+url = { workspace = true, features = ["serde"] }
 
 [build-dependencies]
 kanidm_build_profiles = { workspace = true }
 
 [dev-dependencies]
 compact_jwt = { workspace = true }
+# used for webdriver testing
+fantoccini = { version = "0.19.3" }
+
 serde_json = { workspace = true }
 webauthn-authenticator-rs = { workspace = true }
 oauth2_ext = { workspace = true, default-features = false }
