--- a/Cargo.toml
+++ b/Cargo.toml
@@ -86,7 +86,7 @@ kanidm_lib_crypto = { path = "./libs/crypto" }
 kanidm_lib_file_permissions = { path = "./libs/file_permissions" }
 kanidm_proto = { path = "./proto", version = "1.1.0-rc.15-dev" }
 kanidm_unix_int = { path = "./unix_integration" }
-kanidm_utils_users = { path = "./libs/users" }
+kanidm_utils_users = { path = "./libs/users", version = "1.1.0-rc.15-dev" }
 
 serde_with = "3.4.0"
 argon2 = { version = "0.5.2", features = ["alloc"] }
@@ -184,7 +184,7 @@ serde_cbor = { version = "0.12.0-dev", package = "serde_cbor_2" }
 serde_json = "^1.0.107"
 serde-wasm-bindgen = "0.5"
 shellexpand = "^2.1.2"
-sketching = { path = "./libs/sketching" }
+sketching = { path = "./libs/sketching", version = "1.1.0-rc.15-dev" }
 smartstring = "^1.0.1"
 smolset = "^1.3.1"
 sshkey-attest = "^0.5.0-dev"
