--- a/Cargo.toml
+++ b/Cargo.toml
@@ -76,16 +76,16 @@ sshkey-attest = { git = "https://github.com/kanidm/webauthn-rs.git", rev = "2218
 # sshkey-attest = { path = "../webauthn-rs/sshkey-attest" }
 
 [workspace.dependencies]
-kanidmd_core = { path = "./server/core" }
-kanidmd_lib = { path = "./server/lib" }
-kanidmd_lib_macros = { path = "./server/lib-macros" }
-kanidmd_testkit = { path = "./server/testkit" }
+kanidmd_core = { path = "./server/core", version = "1.1.0-rc.15-dev" }
+kanidmd_lib = { path = "./server/lib", version = "1.1.0-rc.15-dev" }
+kanidmd_lib_macros = { path = "./server/lib-macros", version = "1.1.0-rc.15-dev" }
+kanidmd_testkit = { path = "./server/testkit", version = "1.1.0-rc.15-dev" }
 kanidm_build_profiles = { path = "./libs/profiles", version = "1.1.0-rc.15-dev" }
 kanidm_client = { path = "./libs/client", version = "1.1.0-rc.15-dev" }
-kanidm_lib_crypto = { path = "./libs/crypto" }
-kanidm_lib_file_permissions = { path = "./libs/file_permissions" }
+kanidm_lib_crypto = { path = "./libs/crypto", version = "1.1.0-rc.15-dev" }
+kanidm_lib_file_permissions = { path = "./libs/file_permissions", version = "1.1.0-rc.15-dev" }
 kanidm_proto = { path = "./proto", version = "1.1.0-rc.15-dev" }
-kanidm_unix_int = { path = "./unix_integration" }
+kanidm_unix_int = { path = "./unix_integration", version = "1.1.0-rc.15-dev" }
 kanidm_utils_users = { path = "./libs/users", version = "1.1.0-rc.15-dev" }
 
 serde_with = "3.4.0"
