--- a/libs/crypto/Cargo.toml
+++ b/libs/crypto/Cargo.toml
@@ -2,6 +2,11 @@
 name = "kanidm_lib_crypto"
 version = "0.1.0"
 edition = { workspace = true }
+description = "Kanidm cryptographic functionality"
+license = { workspace = true }
+homepage = { workspace = true }
+repository = { workspace = true }
+
 
 [features]
 tpm = ["dep:tss-esapi"]
