--- a/.gitignore
+++ b/.gitignore
@@ -35,3 +35,4 @@ pykanidm/site/
 scripts/oauth_proxy/client.secret
 scripts/oauth_proxy/envfile
 scripts/otel/loki/data/*
+scripts/otel/loki/tempo-data/*
