--- a/server/core/Cargo.toml
+++ b/server/core/Cargo.toml
@@ -75,6 +75,7 @@ utoipa = { workspace = true, features = [
     "uuid",
 ] }
 utoipa-swagger-ui = { workspace = true, features = ["axum"] }
+opentelemetry_api.workspace = true
 
 [dev-dependencies]
 walkdir = { workspace = true }
