--- a/scripts/otel/local-config.yaml
+++ b/scripts/otel/local-config.yaml
@@ -1,4 +1,5 @@
 ---
+# It should be *very* clear that this is an insecure, dev-only configuration. Don't run this in production!
 server:
   http_listen_port: 3100
 # memberlist:
