--- a/scripts/otel/docker-compose.yml
+++ b/scripts/otel/docker-compose.yml
@@ -25,25 +25,25 @@ services:
         source: tempo
         target: /tmp/tempo
     ports:
-      - "14268:14268"  # jaeger ingest
+      # - "14268:14268"  # jaeger ingest
       - "3200:3200"   # tempo
       - "9095:9095" # tempo grpc
       - "4317:4317"  # otlp grpc
-      - "4318:4318"  # otlp http
-      - "9411:9411"   # zipkin
-  loki:
-    image: docker.io/grafana/loki:2.9.2
-    volumes:
-      - type: bind
-        source: ./local-config.yaml
-        target: /etc/loki/local-config.yaml
-    command: |
-      -config.file=/etc/loki/local-config.yaml \
-      -target=all
-    ports:
-      - "3100:3100"
-      - "3101:3101"
-      - "3102:3102"
+      # - "4318:4318"  # otlp http
+      # - "9411:9411"   # zipkin
+  # loki:
+  #   image: docker.io/grafana/loki:2.9.2
+  #   volumes:
+  #     - type: bind
+  #       source: ./loki-local-config.yaml
+  #       target: /etc/loki/local-config.yaml
+  #   command: |
+  #     -config.file=/etc/loki/local-config.yaml \
+  #     -target=all
+  #   ports:
+  #     - "3100:3100"
+  #     - "3101:3101"
+  #     - "3102:3102"
   minio:
     image: minio/minio
     entrypoint:
