--- a/libs/sketching/Cargo.toml
+++ b/libs/sketching/Cargo.toml
@@ -17,16 +17,8 @@ test = false
 doctest = false
 
 [dependencies]
+gethostname = "0.4.3"
 num_enum = { workspace = true }
-tracing = { workspace = true, features = ["attributes"] }
-tracing-subscriber = { workspace = true, features = ["env-filter"] }
-tracing-forest = { workspace = true, features = [
-    "uuid",
-    "smallvec",
-    "tokio",
-    "env-filter",
-] }
-
 opentelemetry = { workspace = true, features = ["metrics", "rt-tokio"] }
 opentelemetry-otlp = { workspace = true, default-features = false, features = [
     "serde",
@@ -35,9 +27,16 @@ opentelemetry-otlp = { workspace = true, default-features = false, features = [
     "http-proto",
     "grpc-tonic",
 ] }
-
 opentelemetry_sdk = { workspace = true }
-tracing-opentelemetry = { workspace = true }
-uuid = { workspace = true, features = ["v4"] }
-rand.workspace = true
+rand = { workspace = true }
 serde = { workspace = true, features = ["derive"] }
+tracing = { workspace = true, features = ["attributes"] }
+tracing-forest = { workspace = true, features = [
+    "uuid",
+    "smallvec",
+    "tokio",
+    "env-filter",
+] }
+tracing-opentelemetry = { workspace = true }
+tracing-subscriber = { workspace = true, features = ["env-filter"] }
+uuid = { workspace = true, features = ["v4"] }
