OpenAPI validation issues Fixes #2295

--- a/server/testkit/Cargo.toml
+++ b/server/testkit/Cargo.toml
@@ -66,3 +66,4 @@ tokio-openssl = { workspace = true }
 kanidm_lib_crypto = { workspace = true }
 uuid = { workspace = true }
 webauthn-authenticator-rs = { workspace = true }
+jsonschema = "0.17.1"
