--- a/server/core/Cargo.toml
+++ b/server/core/Cargo.toml
@@ -70,6 +70,9 @@ utoipa = { workspace = true, features = [
     "axum_extras",
     "openapi_extensions",
     "preserve_order",     #  Preserve order of properties when serializing the schema for a component.
+    "time",
+    "url",
+    "uuid",
 ] }
 utoipa-swagger-ui = { workspace = true, features = ["axum"] }
 
