--- a/examples/insecure_server.toml
+++ b/examples/insecure_server.toml
@@ -15,6 +15,8 @@ tls_key = "/tmp/kanidm/key.pem"
 log_level = "debug"
 # log_level = "trace"
 
+otel_grpc_url = "http://localhost:4317"
+
 domain = "localhost"
 origin = "https://localhost:8443"
 trust_x_forward_for = true
