Clean up artefacts

--- a/.gitignore
+++ b/.gitignore
@@ -19,6 +19,9 @@ tools/orca/example_profiles/small/orca-edited.toml
 # webui things we don't need
 *.d.ts
 
+server/web_ui/*/pkg/*.js
+server/web_ui/*/pkg/*.wasm
+
 # kanidm simple packaging
 deployment-config/
 kanidm_simple_pkg/
