--- a/Cargo.toml
+++ b/Cargo.toml
@@ -76,17 +76,18 @@ sshkey-attest = { git = "https://github.com/kanidm/webauthn-rs.git", rev = "2218
 # sshkey-attest = { path = "../webauthn-rs/sshkey-attest" }
 
 [workspace.dependencies]
-kanidmd_core = { path = "./server/core", version = "1.1.0-rc.15-dev" }
-kanidmd_lib = { path = "./server/lib", version = "1.1.0-rc.15-dev" }
-kanidmd_lib_macros = { path = "./server/lib-macros", version = "1.1.0-rc.15-dev" }
-kanidmd_testkit = { path = "./server/testkit", version = "1.1.0-rc.15-dev" }
-kanidm_build_profiles = { path = "./libs/profiles", version = "1.1.0-rc.15-dev" }
-kanidm_client = { path = "./libs/client", version = "1.1.0-rc.15-dev" }
-kanidm_lib_crypto = { path = "./libs/crypto", version = "1.1.0-rc.15-dev" }
-kanidm_lib_file_permissions = { path = "./libs/file_permissions", version = "1.1.0-rc.15-dev" }
-kanidm_proto = { path = "./proto", version = "1.1.0-rc.15-dev" }
-kanidm_unix_int = { path = "./unix_integration", version = "1.1.0-rc.15-dev" }
-kanidm_utils_users = { path = "./libs/users", version = "1.1.0-rc.15-dev" }
+kanidmd_core = { path = "./server/core", version = "1.1.0-rc.15" }
+kanidmd_lib = { path = "./server/lib", version = "1.1.0-rc.15" }
+kanidmd_lib_macros = { path = "./server/lib-macros", version = "1.1.0-rc.15" }
+kanidmd_testkit = { path = "./server/testkit", version = "1.1.0-rc.15" }
+kanidm_build_profiles = { path = "./libs/profiles", version = "1.1.0-rc.15" }
+kanidm_client = { path = "./libs/client", version = "1.1.0-rc.15" }
+kanidm_lib_crypto = { path = "./libs/crypto", version = "1.1.0-rc.15" }
+kanidm_lib_file_permissions = { path = "./libs/file_permissions", version = "1.1.0-rc.15" }
+kanidm_proto = { path = "./proto", version = "1.1.0-rc.15" }
+kanidm_unix_int = { path = "./unix_integration", version = "1.1.0-rc.15" }
+kanidm_utils_users = { path = "./libs/users", version = "1.1.0-rc.15" }
+sketching = { path = "./libs/sketching", version = "1.1.0-rc.15" }
 
 serde_with = "3.4.0"
 argon2 = { version = "0.5.2", features = ["alloc"] }
@@ -184,7 +185,6 @@ serde_cbor = { version = "0.12.0-dev", package = "serde_cbor_2" }
 serde_json = "^1.0.107"
 serde-wasm-bindgen = "0.5"
 shellexpand = "^2.1.2"
-sketching = { path = "./libs/sketching", version = "1.1.0-rc.15-dev" }
 smartstring = "^1.0.1"
 smolset = "^1.3.1"
 sshkey-attest = "^0.5.0-dev"
