--- a/.github/workflows/debian_package_kanidm.yml
+++ b/.github/workflows/debian_package_kanidm.yml
@@ -13,46 +13,46 @@ concurrency:
   group: ${{ github.workflow }}-${{ github.ref }}
   cancel-in-progress: true
 jobs:
-  build-deb-package:
-    name: Build deb packages
-    strategy:
-      matrix:
-        image:
-          - ubuntu:22.04
-          - debian:12
-      fail-fast: false
-    runs-on: ubuntu-latest
-    container:
-      image: ${{ matrix.image }}
-      env:
-        DEBIAN_FRONTEND: noninteractive
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v4
-      - name: install curl
-        run: |
-          apt-get update && apt-get install -y curl
-      - name: Setup sccache
-        uses: mozilla-actions/sccache-action@v0.0.3
-        with:
-          version: "v0.4.2"
-      - name: Install Rust
-        uses: dtolnay/rust-toolchain@stable
-      - name: Install dependencies
-        run: |
-          scripts/install_ubuntu_dependencies.sh
-      - name: Install wasm-pack
-        run: cargo install wasm-pack
-      - name: Build packages (kanidm-unixd)
-        run: make -f platform/debian/Makefile debs/kanidm-unixd
-      - name: Upload debs
-        uses: actions/upload-artifact@v3
-        with:
-          name: ubuntu-packages
-          path: |
-            target/*.deb
+  # build-deb-package:
+  #   name: Build deb packages
+  #   strategy:
+  #     matrix:
+  #       image:
+  #         - ubuntu:22.04
+  #         - debian:12
+  #     fail-fast: false
+  #   runs-on: ubuntu-latest
+  #   container:
+  #     image: ${{ matrix.image }}
+  #     env:
+  #       DEBIAN_FRONTEND: noninteractive
+  #   steps:
+  #     - name: Checkout
+  #       uses: actions/checkout@v4
+  #     - name: install curl
+  #       run: |
+  #         apt-get update && apt-get install -y curl
+  #     - name: Setup sccache
+  #       uses: mozilla-actions/sccache-action@v0.0.3
+  #       with:
+  #         version: "v0.4.2"
+  #     - name: Install Rust
+  #       uses: dtolnay/rust-toolchain@stable
+  #     - name: Install dependencies
+  #       run: |
+  #         scripts/install_ubuntu_dependencies.sh
+  #     - name: Install wasm-pack
+  #       run: cargo install wasm-pack
+  #     - name: Build packages (kanidm-unixd)
+  #       run: make -f platform/debian/Makefile debs/kanidm-unixd
+  #     - name: Upload debs
+  #       uses: actions/upload-artifact@v3
+  #       with:
+  #         name: ubuntu-packages
+  #         path: |
+  #           target/*.deb
   build-deb-package-arm:
-    name: Build deb packages
+    name: Build deb packages (ARM)
     strategy:
       matrix:
         image:
@@ -82,7 +82,7 @@ jobs:
         run: |
           scripts/install_ubuntu_dependencies.sh
       - name: build with target
-        run: cargo build --target=aarch64-unknown-linux-gnu --release --bin kanidm_unix
+        run: cargo build --target=aarch64-unknown-linux-gnu --release --bin kanidm_unixd --bin kanidm_unixd_tasks --bin kanidm-unix
       # - name: Install wasm-pack
       #   run: cargo install wasm-pack
       # - name: Build packages (kanidm-unixd)
@@ -100,7 +100,7 @@ jobs:
 
     name: Upload to releases
     needs:
-      - build-deb-package
+      # - build-deb-package
       - build-deb-package-arm
     runs-on: ubuntu-latest
     if: ${{ github.ref == 'refs/heads/master' && github.repository == 'kanidm/kanidm' }}
